just landing fine tuned

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Here we dive!</title>
     </head>
 
     <body>
+        <img src="giphy.gif"
+            alt="An animation depicting getting ready for takeoff."
+            class="center-image">
 
     </body>
 </html>
